objects/tinderbox__Document__c.object
<CustomObject>
    <description>Stores one record for each Tinderbox Proposal.  Use this instead of the old (TinderBox__Proposal__c) object, as it is a master-detail to the opportunity object.</description>
    <fields>
        <fullName>tinderbox__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Last_Viewed__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TBAccount__c</fullName>
        <description>TB Account ID (Tied to Custom Setting Tinderbox Accounts)</description>
        <inlineHelpText>TB Account ID (Tied to Custom Setting Tinderbox Accounts)</inlineHelpText>
        <label>TBAccount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TinderBoxId__c</fullName>
        <externalId>true</externalId>
        <label>TinderBoxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tinderbox__Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TinderBox Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TinderBox Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>